bugfix(Breadcrumb): IDS-453 breadcrumb positioning on mobile should be above hero
Change breadcrumb to absolute on desktop rather than all breakpoints

--- a/packages/styles/scss/components/_hero.scss
+++ b/packages/styles/scss/components/_hero.scss
@@ -163,15 +163,18 @@
   }
 
   .ilo--breadcrumb {
-    left: 0;
-    max-width: 560px;
-    position: absolute;
-    top: 0;
     width: 100%;
 
     .right-to-left & {
       left: auto;
       right: 0;
+    }
+
+    @include breakpoint("medium") {
+      left: 0;
+      max-width: 560px;
+      position: absolute;
+      top: 0;
     }
   }
 }
